# haproxy-spoa-example

./: .gitignore  Cargo.toml  README.md
haproxy_conf/: haproxy.cfg  my_service.lua  spoe_demo.cfg
src/: action.rs  frame.rs  frame_codec.rs  frame_error.rs  frame_flags.rs  frame_header.rs  frame_payload.rs  frame_storage.rs  frame_type.rs  macros.rs  main.rs  nb_args.rs  support_version.rs  typed_data.rs  varint.rs  varint_binary.rs  varint_string.rs
src/frames/: ack_frame.rs  agent_disconnect_frame.rs  agent_hello_frame.rs  haproxy_disconnect_frame.rs  haproxy_hello_frame.rs  mod.rs  notify_frame.rs
tests/: haproxy_run_test.rs  test_utils.rs
