[package]
name = "haproxy-spoa-example"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
bytes = "0.5.4"
anyhow = "1.0.28"
thiserror = "1.0.15"
num_enum = "0.4.3"
futures_codec = "0.4.0"
futures = "0.3.4"
smol = "0.1.2"
semver = "0.9.0"
strum = "0.18.0"
strum_macros = "0.18.0"
paste = "0.1.11"
